--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -82,6 +82,22 @@ contact-detail{
     border: 1px solid #D8D8D8;
     border-radius: 10px;
     background: #1F1F1F;
+    font-family: "Outfit", sans-serif;
     color: #D8D8D8;
     font-size: 20px;
+}
+.contact-submit{
+    border: none;
+    color: white;
+    border-radius:50px;
+    background: linear-gradient(270deg, #DF8908 -5.09%, #B415FF 100%);
+    font-size: 22px;
+    padding: 20px 60px;
+    cursor: pointer;
+    margin-bottom: 50px;
+    transition: 0.3s;
+}
+.contact-submit:hover{
+    transform: scale(1.1);
+    transition: 0.3s;
 }
