refactor: Improve accessibility and styling of Footer component

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -23,3 +23,16 @@
     transform: scale(1.05);
     background: linear-gradient(267deg, #B923E1 0.36%, #DA7C25 102.6%);
 }
+.nav-menu li{
+    display: flex;
+    flex-direction: column;
+    gap:5px;
+    cursor:pointer;
+}.nav-menu span{
+    display: flex;
+    margin: auto;
+}
+.anchor-link{
+    text-decoration: none;
+    color: white;
+}
