--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -33,18 +33,12 @@
     margin-bottom: 50px;
 }
 .hero-connect{
-    border-radius: 50px;
-    padding: 20px 40px;
-    background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 102.6%);
-    cursor: pointer;
-    transition: 0.5s;
+    border-radius: 40px;
+    padding: 20px 30px;
 }
 .hero-resume{
     padding:20px 50px;
-    border-radius:50px;
-    border: 2px solid #FFF;
-    cursor:pointer;
-    transition: 0.5s;
+    border-radius:40px;
 }
 .hero-connect:hover{
     background: linear-gradient(267deg, #B923E1 0.36%, #DA7C25 102.6%);
@@ -54,4 +48,32 @@
     background: #FFF;
     color: #000;
     transform: scale(1.05);
+}
+@media (max-width: 768px){
+    .hero img{
+        margin-top: 120px;
+        width:260px;
+    }
+    .hero h1{
+        margin-top:50px;
+        width:90%;
+        font-size: 40px;
+    }
+    .hero p{
+        width: 60%;
+        font-size:18px;
+        line-height:32px;
+        margin: 10px 0px;
+    }
+    .hero-action{
+        gap: 20px;
+        font-size:18px;
+        margin-bottom:50px;
+    }
+    .hero-connect{
+        padding: 15px 30px;
+    }
+    .hero-resume{
+        padding: 15px 30px;
+    }
 }
