--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -68,3 +68,43 @@
     transform: scale(1.05);
     transition: 0.4s;
 }
+@media (max-width: 768px){
+    .services{
+        align-items: start;
+        gap: 70px;
+        margin: 20px 70px;
+    }
+    .services-title h1{
+        padding:0;
+        font-size: 50px;
+    }
+    .services-title img{
+        width: 130px;
+        margin-right: -20px;
+    }
+    .services-container{
+        grid-template-columns: 1fr;
+    }
+    .services-format{
+        gap:20px;
+        padding: 30px;
+    }
+    .services-format h3{
+        font-size: 24px;
+    }
+    .services-format h2{
+        font-size: 27px;
+    }
+    .services-format p{
+        font-size: 18px;
+        line-height: 32px;
+        max-width: 300px;
+    }
+    .services-readmore{
+        width:20px;
+    }
+    .services-container{
+        grid-template-columns: 1fr 1fr;
+        gap:30px;
+    }
+}
